fixed the collapse and show properties of the tree, added some data to data.js

--- a/style.css
+++ b/style.css
@@ -28,26 +28,3 @@
      margin-bottom: 10px;
      overflow: auto;
  }
- /* 
- #panel {
-     background-color: rgb(37, 145, 161);
-     border-radius: 10px;
-     
- }
-
- #panel h1 {
-     background: rgb(45, 155, 168);
-     border-top-left-radius: 10px;
-     border-top-right-radius: 10px;
-     padding: 5px;
- }
-
- #panel p {
-     background: rgb(45, 155, 168);
-     font-weight: bold;
- }
-
- #panel p:last-child {
-     border-bottom-left-radius: 10px;
-     border-bottom-right-radius: 10px;
- } */
